Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI1553VB.BAS

Public Declare Function BTI1553_BlkRd Lib "BTI1553.DLL" Alias "_BTI1553_BlkRd@16" (ByRef block As Integer, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BlkReset Lib "BTI1553.DLL" Alias "_BTI1553_BlkReset@12" (ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BlkSWDRd Lib "BTI1553.DLL" Alias "_BTI1553_BlkSWDRd@12" (ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI1553_BlkSWDWr Lib "BTI1553.DLL" Alias "_BTI1553_BlkSWDWr@16" (ByVal swdval As Integer, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BlkWipe Lib "BTI1553.DLL" Alias "_BTI1553_BlkWipe@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BlkWr Lib "BTI1553.DLL" Alias "_BTI1553_BlkWr@16" (ByRef block As Integer, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChConfig Lib "BTI1553.DLL" Alias "_BTI1553_ChConfig@20" (ByVal enableflag As Long, ByVal typeval As Long, ByVal taval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsRunning Lib "BTI1553.DLL" Alias "_BTI1553_ChIsRunning@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdAddr Lib "BTI1553.DLL" Alias "_BTI1553_CmdAddr@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdAlloc Lib "BTI1553.DLL" Alias "_BTI1553_CmdAlloc@8" (ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdAllocEx Lib "BTI1553.DLL" Alias "_BTI1553_CmdAllocEx@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdBaseRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdBaseRd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_CmdBaseWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdBaseWr@12" (ByVal addrval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_CmdClear Lib "BTI1553.DLL" Alias "_BTI1553_CmdClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdCountRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdCountRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_CmdCountWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdCountWr@12" (ByVal countval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_CmdCtrlRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdCtrlRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_CmdCtrlWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdCtrlWr@16" (ByVal ctrlval As Integer, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_CmdCurrRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdCurrRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_CmdCurrWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdCurrWr@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Sub BTI1553_CmdInit Lib "BTI1553.DLL" Alias "_BTI1553_CmdInit@8" (ByVal opcode As Integer, ByRef block As Integer)
Public Declare Function BTI1553_CmdInsert Lib "BTI1553.DLL" Alias "_BTI1553_CmdInsert@12" (ByRef block As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdRd@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_CmdRestart Lib "BTI1553.DLL" Alias "_BTI1553_CmdRestart@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Sub BTI1553_CmdStackClr Lib "BTI1553.DLL" Alias "_BTI1553_CmdStackClr@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_CmdStartRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdStartRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_CmdStartWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdStartWr@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_CmdTotalRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdTotalRd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_CmdTotalWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdTotalWr@12" (ByVal countval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_CmdWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdWr@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_DescAddr Lib "BTI1553.DLL" Alias "_BTI1553_DescAddr@24" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_DescAlloc Lib "BTI1553.DLL" Alias "_BTI1553_DescAlloc@4" (ByVal handleval As Long) As Long
Public Declare Function BTI1553_DescConfig Lib "BTI1553.DLL" Alias "_BTI1553_DescConfig@28" (ByVal configval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_DescConfigAll Lib "BTI1553.DLL" Alias "_BTI1553_DescConfigAll@16" (ByVal configval As Long, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_DescOptRd Lib "BTI1553.DLL" Alias "_BTI1553_DescOptRd@24" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_DescOptWr Lib "BTI1553.DLL" Alias "_BTI1553_DescOptWr@28" (ByVal descopt As Integer, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_DescPtrRd Lib "BTI1553.DLL" Alias "_BTI1553_DescPtrRd@24" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_DescPtrWr Lib "BTI1553.DLL" Alias "_BTI1553_DescPtrWr@28" (ByVal msgaddr As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_DescRd Lib "BTI1553.DLL" Alias "_BTI1553_DescRd@28" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByRef desc As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_DescWr Lib "BTI1553.DLL" Alias "_BTI1553_DescWr@28" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByRef desc As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_DllUsageCount Lib "BTI1553.DLL" Alias "_BTI1553_DllUsageCount@0" () As Long
Public Declare Function BTI1553_ErrorIsTaggedBC Lib "BTI1553.DLL" Alias "_BTI1553_ErrorIsTaggedBC@12" (ByVal msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ErrorIsTaggedRT Lib "BTI1553.DLL" Alias "_BTI1553_ErrorIsTaggedRT@24" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ErrorResponse Lib "BTI1553.DLL" Alias "_BTI1553_ErrorResponse@12" (ByVal responseval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_ErrorSync Lib "BTI1553.DLL" Alias "_BTI1553_ErrorSync@12" (ByVal value As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_ErrorTimeout Lib "BTI1553.DLL" Alias "_BTI1553_ErrorTimeout@12" (ByVal timeoutval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_HostComm Lib "BTI1553.DLL" Alias "_BTI1553_HostComm@8" (ByVal lpparam As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_IsChan Lib "BTI1553.DLL" Alias "_BTI1553_IsChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListAddr Lib "BTI1553.DLL" Alias "_BTI1553_ListAddr@12" (ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListAddrEx Lib "BTI1553.DLL" Alias "_BTI1553_ListAddrEx@16" (ByVal index As Long, ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListBlockRdEx Lib "BTI1553.DLL" Alias "_BTI1553_ListBlockRdEx@16" (ByRef buf As Integer, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListBlockWrEx Lib "BTI1553.DLL" Alias "_BTI1553_ListBlockWrEx@16" (ByRef buf As Integer, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListClear Lib "BTI1553.DLL" Alias "_BTI1553_ListClear@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListConfig Lib "BTI1553.DLL" Alias "_BTI1553_ListConfig@16" (ByVal configval As Long, ByVal count As Long, ByVal skipval As Integer, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListConfigEx Lib "BTI1553.DLL" Alias "_BTI1553_ListConfigEx@16" (ByVal configval As Long, ByVal count As Long, ByVal skipval As Integer, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListDataRdEx Lib "BTI1553.DLL" Alias "_BTI1553_ListDataRdEx@20" (ByRef buf As Integer, ByVal count As Long, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListDataWrEx Lib "BTI1553.DLL" Alias "_BTI1553_ListDataWrEx@20" (ByRef buf As Integer, ByVal count As Long, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListInit Lib "BTI1553.DLL" Alias "_BTI1553_ListInit@12" (ByVal listaddr As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListNextRd Lib "BTI1553.DLL" Alias "_BTI1553_ListNextRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListNextWr Lib "BTI1553.DLL" Alias "_BTI1553_ListNextWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_ListPostRd Lib "BTI1553.DLL" Alias "_BTI1553_ListPostRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTI1553_ListPostWr Lib "BTI1553.DLL" Alias "_BTI1553_ListPostWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTI1553_ListPreRd Lib "BTI1553.DLL" Alias "_BTI1553_ListPreRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTI1553_ListPreWr Lib "BTI1553.DLL" Alias "_BTI1553_ListPreWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Function BTI1553_ListStatus Lib "BTI1553.DLL" Alias "_BTI1553_ListStatus@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ModeIsBC Lib "BTI1553.DLL" Alias "_BTI1553_ModeIsBC@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTI1553_ModeIsMon Lib "BTI1553.DLL" Alias "_BTI1553_ModeIsMon@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTI1553_ModeIsNotBC Lib "BTI1553.DLL" Alias "_BTI1553_ModeIsNotBC@4" (ByVal chanflag As Integer) As Long
